[project]
name = "prompt-sdk-python"
dynamic = ["version"]
authors = [{ name = "Vincent Nahn", email = "vincent@nahn.dev" }]
description = "Generate client libraries from prompts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "jinja2>=3.1.6",
  "pydantic>=2.12.5",
  "pydantic-settings[toml]>=2.12.0",
  "python-frontmatter>=1.1.0",
  "typer>=0.20.0",
]

[dependency-groups]
dev = ["pytest>=9.0.1"]

[project.scripts]
promptsdk = "prompt_sdk.main:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "src/prompt_sdk/__init__.py" }
distribution = true

[tool.pdm.build]
includes = ["src/prompt_sdk"]


[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "TID", # flake8-tidy-imports
]
ignore = [
  "E501",   # line too long, handled by black
  "B008",   # do not perform function calls in argument defaults
  "C901",   # too complex
  "W191",   # indentation contains tabs
  "TID252", # relative imports okay
]
